// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperatingSystemBadge expect to render with majorOsVersion given 1`] = `
<Label
  color="cyan"
>
  RHEL 
  7
</Label>
`;

exports[`OperatingSystemBadge expect to render without error 1`] = `
<Label
  color="var(--pf-global--disabled-color--200)"
>
  RHEL 
</Label>
`;
